--- a/backend/package.json
+++ b/backend/package.json
@@ -8,6 +8,7 @@
     "dev": "NODE_ENV=development ts-node-dev -r dotenv/config --no-notify --respawn --transpile-only src"
   },
   "dependencies": {
+    "@prisma/client": "^3.7.0",
     "apollo-server-core": "3.3.0",
     "apollo-server-express": "3.3.0",
     "express": "^4.17.2",
@@ -17,6 +18,7 @@
   },
   "devDependencies": {
     "dotenv": "^10.0.0",
+    "prisma": "^3.7.0",
     "ts-node-dev": "^1.1.8",
     "typescript": "^4.5.4"
   }
