--- a/backend/package.json
+++ b/backend/package.json
@@ -11,12 +11,21 @@
     "@prisma/client": "^3.7.0",
     "apollo-server-core": "3.3.0",
     "apollo-server-express": "3.3.0",
+    "bcrypt": "^5.0.1",
+    "cookie-parser": "^1.4.6",
     "express": "^4.17.2",
     "graphql": "^16.2.0",
+    "jsonwebtoken": "^8.5.1",
+    "ms": "^2.1.3",
     "nexus": "1.2.0-next.17",
     "ts-node": "^10.4.0"
   },
   "devDependencies": {
+    "@types/bcrypt": "^5.0.0",
+    "@types/cookie-parser": "^1.4.2",
+    "@types/date-fns": "^2.6.0",
+    "@types/jsonwebtoken": "^8.5.6",
+    "@types/ms": "^0.7.31",
     "dotenv": "^10.0.0",
     "prisma": "^3.7.0",
     "ts-node-dev": "^1.1.8",
