--- a/backend/package.json
+++ b/backend/package.json
@@ -18,6 +18,7 @@
     "jsonwebtoken": "^8.5.1",
     "ms": "^2.1.3",
     "nexus": "1.2.0-next.17",
+    "stripe": "^8.195.0",
     "ts-node": "^10.4.0"
   },
   "devDependencies": {
