--- a/frontend/package.json
+++ b/frontend/package.json
@@ -10,13 +10,16 @@
     "@apollo/client": "^3.5.6",
     "@apollo/link-error": "^2.0.0-beta.3",
     "apollo-upload-client": "^17.0.0",
+    "downshift": "2.2.3",
     "graphql": "^16.2.0",
+    "lodash.debounce": "4.0.8",
     "next": "latest",
     "next-with-apollo": "^5.2.1",
     "nprogress": "^0.2.0",
     "react": "^17.0.2",
     "react-dom": "^17.0.2",
     "react-is": "^17.0.2",
+    "react-transition-group": "2.5.0",
     "styled-components": "^5.2.3"
   },
   "devDependencies": {
@@ -25,10 +28,12 @@
     "@graphql-codegen/typescript-operations": "^2.2.2",
     "@graphql-codegen/typescript-react-apollo": "^3.2.3",
     "@types/apollo-upload-client": "^14.1.0",
+    "@types/lodash.debounce": "^4.0.6",
     "@types/node": "15.0.0",
     "@types/nprogress": "^0.2.0",
     "@types/react": "17.0.4",
     "@types/react-dom": "17.0.3",
+    "@types/react-transition-group": "^2.8.0",
     "@types/styled-components": "5.1.9",
     "babel-plugin-styled-components": "^1.12.0",
     "typescript": "4.2.4"
