--- a/frontend/package.json
+++ b/frontend/package.json
@@ -13,12 +13,14 @@
     "downshift": "2.2.3",
     "graphql": "^16.2.0",
     "lodash.debounce": "4.0.8",
+    "moment": "^2.29.1",
     "next": "latest",
     "next-with-apollo": "^5.2.1",
     "nprogress": "^0.2.0",
     "react": "^17.0.2",
     "react-dom": "^17.0.2",
     "react-is": "^17.0.2",
+    "react-stripe-checkout": "2.6.3",
     "react-transition-group": "2.5.0",
     "styled-components": "^5.2.3"
   },
