--- a/backend/package.json
+++ b/backend/package.json
@@ -5,6 +5,7 @@
   "main": "src/index.ts",
   "license": "MIT",
   "scripts": {
+    "start": "node dist/index.js",
     "dev": "NODE_ENV=development ts-node-dev -r dotenv/config --no-notify --respawn --transpile-only src"
   },
   "prisma": {
@@ -16,6 +17,7 @@
     "apollo-server-express": "3.3.0",
     "bcrypt": "^5.0.1",
     "cookie-parser": "^1.4.6",
+    "date-fns": "^2.28.0",
     "express": "^4.17.2",
     "graphql": "^16.2.0",
     "jsonwebtoken": "^8.5.1",
